--- a/config.yaml
+++ b/config.yaml
@@ -182,6 +182,34 @@ vector_layers:
             extent: 1024
             buffer: 0
             file: sql/landuse-names.sql.jinja2
+    park:
+        description: Various types of parks
+        sql:
+          - minzoom: 10
+            maxzoom: 14
+            extent: 1024
+            buffer: 4
+            file: sql/park.sql.jinja2
+          - minzoom: 15
+            maxzoom: 15
+            extent: 4096
+            buffer: 16
+            file: sql/park.sql.jinja2
+    park-names:
+        description: Various types of landuse
+        fields:
+            way_area: Area in square meters in web mercator
+        sql:
+          - minzoom: 10
+            maxzoom: 14
+            extent: 256
+            buffer: 0
+            file: sql/park-names.sql.jinja2
+          - minzoom: 15
+            maxzoom: 15
+            extent: 1024
+            buffer: 0
+            file: sql/park-names.sql.jinja2
     settlements:
         description: Populated places
         fields: {}
