--- a/style/landuse-names.yaml
+++ b/style/landuse-names.yaml
@@ -24,20 +24,7 @@ layout:
     - 60
     - 15
 paint:
-  text-color:
-    - match
-    - [get, landuse]
-    - residential
-    - black
-    - commercial
-    - black
-    - retail
-    - black
-    - industrial
-    - black
-    - education
-    - '#353109' # lch(20,25,100)
-    - red
+  text-color: black
   text-halo-width: 1
   text-halo-color:
     - match
@@ -50,6 +37,4 @@ paint:
     - '#fde2e5' # lch(92,10,10)
     - industrial
     - '#e0e3de' # lch(90,3,130)
-    - education
-    - '#ece3b3' # lch(90,25,100)
     - red
