Bring in OpenStreetMap Carto loading instructions
This allows us to progress with the Lua and allows for different
external data.

Fixes #24

--- a/spirit.yaml
+++ b/spirit.yaml
@@ -9,6 +9,7 @@ layers:
   - !!inc/file style/background.yaml
   - !!inc/file style/landuse.yaml
   - !!inc/file style/education.yaml
+  - !!inc/file style/education-outline.yaml
   - !!inc/file style/leisure.yaml
   - !!inc/file style/vegetation.yaml
   - !!inc/file style/vegetation-pattern.yaml
