--- a/style/water-names.yaml
+++ b/style/water-names.yaml
@@ -8,9 +8,7 @@ paint:
   text-halo-width: 1.5
   text-halo-blur: 1
 layout:
-  text-font:
-    - Open Sans Regular
-    - Arial Unicode MS Regular
+  text-font: !!inc/file style/inc/regular-font.yaml
   text-field: '{name}'
   symbol-placement: point
   text-size: 12
