--- a/style/road-text.yaml
+++ b/style/road-text.yaml
@@ -37,9 +37,7 @@ paint:
   text-halo-width: 1.5
   text-halo-blur: 1
 layout:
-  text-font:
-    - Open Sans Regular
-    - Arial Unicode MS Regular
+  text-font: !!inc/file style/inc/regular-font.yaml
   text-field: '{name}'
   symbol-placement: line
   text-size:
