--- a/spirit.yaml
+++ b/spirit.yaml
@@ -1,52 +1,300 @@
-name: Spirit
-version: 8
-sources:
-  spirit:
-    type: vector
-    url: http://127.0.0.1:8000/tilejson.json
-sprite: http://127.0.0.1:8081/sprites
-glyphs: https://pnorman.dev.openstreetmap.org/spirit/fonts/{fontstack}/{range}.pbf
-layers:
-  - !!inc/file style/background.yaml
-  - !!inc/file style/landuse.yaml
-  - !!inc/file style/education.yaml
-  - !!inc/file style/education-outline.yaml
-  - !!inc/file style/leisure.yaml
-  - !!inc/file style/vegetation.yaml
-  - !!inc/file style/vegetation-pattern.yaml
-  - !!inc/file style/water.yaml
-  - !!inc/file style/water-lines.yaml
-  - !!inc/file style/building-fill.yaml
-  - !!inc/file style/building-outline.yaml
-  - !!inc/file style/road-base-casing.yaml
-  - !!inc/file style/road-tunnel-casing.yaml
-  - !!inc/file style/road-base-fill.yaml
-  - !!inc/file style/road-casing.yaml
-  - !!inc/file style/road-fill.yaml
-  - !!inc/file style/rail-casing.yaml
-  - !!inc/file style/rail-fill.yaml
-  - !!inc/file style/road-bridge-casing.yaml
-  - !!inc/file style/road-bridge-fill.yaml
-  - !!inc/file style/rail-bridge-outer-casing.yaml
-  - !!inc/file style/rail-bridge-casing.yaml
-  - !!inc/file style/rail-bridge-fill.yaml
-  - !!inc/file style/aeroways.yaml
-  - !!inc/file style/transit-points.yaml
-  - !!inc/file style/admin-background.yaml
-  - !!inc/file style/admin-background-dashed.yaml
-  - !!inc/file style/admin-2.yaml
-  - !!inc/file style/admin-4.yaml
-  - !!inc/file style/admin-6.yaml
-  - !!inc/file style/admin-8.yaml
-  - !!inc/file style/settlement-names.yaml
-  - !!inc/file style/admin-names.yaml
-  - !!inc/file style/aeroway-text.yaml
-  - !!inc/file style/road-text.yaml
-  - !!inc/file style/water-line-text.yaml
-  - !!inc/file style/water-names.yaml
-  - !!inc/file style/vegetation-names.yaml
-  - !!inc/file style/leisure-names.yaml
-  - !!inc/file style/education-names.yaml
-  - !!inc/file style/landuse-names.yaml
-  - !!inc/file style/food.yaml
-  - !!inc/file style/building-names.yaml
+metadata:
+    id: v1
+    name: Street Spirit
+    attribution: <a href="https://www.openstreetmap.org/copyright">© OpenStreetMap</a> contributors
+    version: 0.0.1
+    center: [0, 0, 4]
+vector_layers:
+    admin:
+        description: Administrative boundaries
+        sql:
+          - minzoom: 4
+            maxzoom: 14
+            buffer: 16
+            extent: 1024
+            file: sql/admin.sql.jinja2
+          - minzoom: 15
+            maxzoom: 15
+            buffer: 16
+            extent: 4096
+            file: sql/admin.sql.jinja2
+    admin-names:
+        description: Administrative area names
+        sql:
+          - minzoom: 0
+            maxzoom: 14
+            buffer: 16
+            extent: 512
+            file: sql/admin-names.sql.jinja2
+
+    buildings:
+        description: Building polygons
+        sql:
+          - minzoom: 13
+            maxzoom: 14
+            extent: 1024
+            buffer: 2
+            file: sql/buildings.sql.jinja2
+          - minzoom: 15
+            maxzoom: 15
+            extent: 4096
+            buffer: 8
+            file: sql/buildings.sql.jinja2
+    building-names:
+        description: Building names
+        sql:
+          - minzoom: 15
+            maxzoom: 15
+            extent: 2048
+            buffer: 8
+            file: sql/building-names.sql.jinja2
+    water:
+        description: Ocean and water polygons
+        sql:
+          - minzoom: 0
+            maxzoom: 14
+            extent: 1024
+            file: sql/water.sql.jinja2
+          - minzoom: 15
+            maxzoom: 15
+            extent: 4096
+            file: sql/water.sql.jinja2
+    water-lines:
+        description: Water linestrings
+        fields:
+            waterway: Type of waterway
+            name: Name of waterway
+        sql:
+          - minzoom: 8
+            maxzoom: 14
+            extent: 1024
+            buffer: 2
+            file: sql/water-lines.sql.jinja2
+          - minzoom: 15
+            maxzoom: 15
+            extent: 4096
+            buffer: 8
+            file: sql/water-lines.sql.jinja2
+    water-names:
+        description: Names for water bodies
+        fields:
+            name: Name of water body
+        sql:
+          - minzoom: 8
+            maxzoom: 14
+            extent: 1024
+            buffer: 2
+            file: sql/water-names.sql.jinja2
+          - minzoom: 15
+            maxzoom: 15
+            extent: 4096
+            buffer: 8
+            file: sql/water-names.sql.jinja2
+    roads:
+        description: Linear road features
+        fields:
+            highway: Type of highway
+        sql:
+          - minzoom: 10
+            maxzoom: 14
+            extent: 1024
+            buffer: 4
+            file: sql/roads-high.sql.jinja2
+          - minzoom: 15
+            maxzoom: 15
+            extent: 4096
+            buffer: 16
+            file: sql/roads-high.sql.jinja2
+    railways:
+        description: Linear railway features
+        fields:
+            highway: Type of highway
+        sql:
+          - minzoom: 12
+            maxzoom: 14
+            extent: 1024
+            buffer: 4
+            file: sql/railways-high.sql.jinja2
+          - minzoom: 15
+            maxzoom: 15
+            extent: 4096
+            buffer: 16
+            file: sql/railways-high.sql.jinja2
+    aeroways:
+        description: Runways and other aeroways
+        fields: {}
+        sql:
+          - minzoom: 10
+            maxzoom: 14
+            extent: 1024
+            buffer: 8
+            file: sql/aeroways.sql.jinja2
+          - minzoom: 15
+            maxzoom: 15
+            extent: 4096
+            buffer: 64 # Runways get wide at high zooms, so they need an extra-large buffer
+            file: sql/aeroways.sql.jinja2
+    transit-points:
+        description: Transit-oriented points
+        fields:
+            station: If the point is a station or stop
+            mode: Mode of transportation
+        sql:
+          - minzoom: 12
+            maxzoom: 14
+            extent: 512
+            buffer: 0
+            file: sql/transit-points.sql.jinja2
+          - minzoom: 15
+            maxzoom: 15
+            extent: 2048
+            buffer: 0
+            file: sql/transit-points.sql.jinja2
+    landuse:
+        description: Various types of landuse
+        fields:
+            landuse: Type of landuse
+        sql:
+          - minzoom: 10
+            maxzoom: 14
+            extent: 1024
+            buffer: 4
+            file: sql/landuse.sql.jinja2
+          - minzoom: 15
+            maxzoom: 15
+            extent: 4096
+            buffer: 16
+            file: sql/landuse.sql.jinja2
+    landuse-names:
+        description: Various types of landuse
+        fields:
+            landuse: Type of landuse
+            name: Name of landuse
+            way_area: Area in square meters in web mercator
+        sql:
+          - minzoom: 10
+            maxzoom: 14
+            extent: 256
+            buffer: 0
+            file: sql/landuse-names.sql.jinja2
+          - minzoom: 15
+            maxzoom: 15
+            extent: 1024
+            buffer: 0
+            file: sql/landuse-names.sql.jinja2
+    education:
+        description: Various types of educational areas
+        fields:
+            landuse: Type of landuse
+        sql:
+          - minzoom: 10
+            maxzoom: 14
+            extent: 1024
+            buffer: 4
+            file: sql/education.sql.jinja2
+          - minzoom: 15
+            maxzoom: 15
+            extent: 4096
+            buffer: 16
+            file: sql/education.sql.jinja2
+    education-names:
+        description: Names of educational facilities
+        fields:
+            education: Type of landuse
+            name: Name of education
+        sql:
+          - minzoom: 10
+            maxzoom: 14
+            extent: 256
+            buffer: 0
+            file: sql/education-names.sql.jinja2
+          - minzoom: 15
+            maxzoom: 15
+            extent: 1024
+            buffer: 0
+            file: sql/education-names.sql.jinja2
+    leisure:
+        description: Parks and other leisure areas
+        sql:
+          - minzoom: 10
+            maxzoom: 14
+            extent: 1024
+            buffer: 4
+            file: sql/leisure.sql.jinja2
+          - minzoom: 15
+            maxzoom: 15
+            extent: 4096
+            buffer: 16
+            file: sql/leisure.sql.jinja2
+    leisure-names:
+        description: Parks and other leisure area names
+        fields:
+            way_area: Area in square meters in web mercator
+        sql:
+          - minzoom: 10
+            maxzoom: 14
+            extent: 256
+            buffer: 0
+            file: sql/leisure-names.sql.jinja2
+          - minzoom: 15
+            maxzoom: 15
+            extent: 1024
+            buffer: 0
+            file: sql/leisure-names.sql.jinja2
+    settlements:
+        description: Populated places
+        fields: {}
+        sql:
+        sql:
+          - minzoom: 8
+            maxzoom: 14
+            extent: 1024
+            buffer: 4
+            file: sql/settlements.sql.jinja2
+          - minzoom: 15
+            maxzoom: 15
+            extent: 4096
+            buffer: 16
+            file: sql/settlements.sql.jinja2
+    vegetation:
+        description: vegetation areas
+        fields:
+            vegetation: Type of vegetation. One of wood, heath, scrub, wetland, or grass
+            wetland: Wetland tag, if the object is a wetland
+        sql:
+          - minzoom: 10
+            maxzoom: 14
+            extent: 1024
+            buffer: 4
+            file: sql/vegetation.sql.jinja2
+          - minzoom: 15
+            maxzoom: 15
+            extent: 4096
+            buffer: 16
+            file: sql/vegetation.sql.jinja2
+    vegetation-names:
+        description: vegetation names
+        fields:
+            vegetation: Type of vegetation. One of wood, heath, scrub, wetland, or grass
+            wetland: Wetland tag, if the object is a wetland
+        sql:
+          - minzoom: 10
+            maxzoom: 14
+            extent: 256
+            buffer: 4
+            file: sql/vegetation-names.sql.jinja2
+          - minzoom: 15
+            maxzoom: 15
+            extent: 1024
+            buffer: 16
+            file: sql/vegetation-names.sql.jinja2
+    food:
+        description: Food-related POIs
+        fields:
+            name: Name of food POI
+        sql:
+          - minzoom: 15
+            maxzoom: 15
+            extent: 1024
+            buffer: 16
+            file: sql/food.sql.jinja2
