--- a/spirit.yaml
+++ b/spirit.yaml
@@ -12,12 +12,12 @@ vector_layers:
             maxzoom: 14
             buffer: 16
             extent: 1024
-            file: sql/admin.sql.jinja2
+            file: spirit/admin.sql.jinja2
           - minzoom: 15
             maxzoom: 15
             buffer: 16
             extent: 4096
-            file: sql/admin.sql.jinja2
+            file: spirit/admin.sql.jinja2
     admin-names:
         description: Administrative area names
         sql:
@@ -25,7 +25,7 @@ vector_layers:
             maxzoom: 14
             buffer: 16
             extent: 512
-            file: sql/admin-names.sql.jinja2
+            file: spirit/admin-names.sql.jinja2
 
     buildings:
         description: Building polygons
@@ -34,12 +34,12 @@ vector_layers:
             maxzoom: 14
             extent: 1024
             buffer: 2
-            file: sql/buildings.sql.jinja2
+            file: spirit/buildings.sql.jinja2
           - minzoom: 15
             maxzoom: 15
             extent: 4096
             buffer: 8
-            file: sql/buildings.sql.jinja2
+            file: spirit/buildings.sql.jinja2
     building-names:
         description: Building names
         sql:
@@ -47,18 +47,18 @@ vector_layers:
             maxzoom: 15
             extent: 2048
             buffer: 8
-            file: sql/building-names.sql.jinja2
+            file: spirit/building-names.sql.jinja2
     water:
         description: Ocean and water polygons
         sql:
           - minzoom: 0
             maxzoom: 14
             extent: 1024
-            file: sql/water.sql.jinja2
+            file: spirit/water.sql.jinja2
           - minzoom: 15
             maxzoom: 15
             extent: 4096
-            file: sql/water.sql.jinja2
+            file: spirit/water.sql.jinja2
     water-lines:
         description: Water linestrings
         fields:
@@ -69,12 +69,12 @@ vector_layers:
             maxzoom: 14
             extent: 1024
             buffer: 2
-            file: sql/water-lines.sql.jinja2
+            file: spirit/water-lines.sql.jinja2
           - minzoom: 15
             maxzoom: 15
             extent: 4096
             buffer: 8
-            file: sql/water-lines.sql.jinja2
+            file: spirit/water-lines.sql.jinja2
     water-names:
         description: Names for water bodies
         fields:
@@ -84,12 +84,12 @@ vector_layers:
             maxzoom: 14
             extent: 1024
             buffer: 2
-            file: sql/water-names.sql.jinja2
+            file: spirit/water-names.sql.jinja2
           - minzoom: 15
             maxzoom: 15
             extent: 4096
             buffer: 8
-            file: sql/water-names.sql.jinja2
+            file: spirit/water-names.sql.jinja2
     roads:
         description: Linear road features
         fields:
@@ -99,12 +99,12 @@ vector_layers:
             maxzoom: 14
             extent: 1024
             buffer: 4
-            file: sql/roads-high.sql.jinja2
+            file: spirit/roads-high.sql.jinja2
           - minzoom: 15
             maxzoom: 15
             extent: 4096
             buffer: 16
-            file: sql/roads-high.sql.jinja2
+            file: spirit/roads-high.sql.jinja2
     railways:
         description: Linear railway features
         fields:
@@ -114,12 +114,12 @@ vector_layers:
             maxzoom: 14
             extent: 1024
             buffer: 4
-            file: sql/railways-high.sql.jinja2
+            file: spirit/railways-high.sql.jinja2
           - minzoom: 15
             maxzoom: 15
             extent: 4096
             buffer: 16
-            file: sql/railways-high.sql.jinja2
+            file: spirit/railways-high.sql.jinja2
     aeroways:
         description: Runways and other aeroways
         fields: {}
@@ -128,12 +128,12 @@ vector_layers:
             maxzoom: 14
             extent: 1024
             buffer: 8
-            file: sql/aeroways.sql.jinja2
+            file: spirit/aeroways.sql.jinja2
           - minzoom: 15
             maxzoom: 15
             extent: 4096
             buffer: 64 # Runways get wide at high zooms, so they need an extra-large buffer
-            file: sql/aeroways.sql.jinja2
+            file: spirit/aeroways.sql.jinja2
     transit-points:
         description: Transit-oriented points
         fields:
@@ -144,12 +144,12 @@ vector_layers:
             maxzoom: 14
             extent: 512
             buffer: 0
-            file: sql/transit-points.sql.jinja2
+            file: spirit/transit-points.sql.jinja2
           - minzoom: 15
             maxzoom: 15
             extent: 2048
             buffer: 0
-            file: sql/transit-points.sql.jinja2
+            file: spirit/transit-points.sql.jinja2
     landuse:
         description: Various types of landuse
         fields:
@@ -159,12 +159,12 @@ vector_layers:
             maxzoom: 14
             extent: 1024
             buffer: 4
-            file: sql/landuse.sql.jinja2
+            file: spirit/landuse.sql.jinja2
           - minzoom: 15
             maxzoom: 15
             extent: 4096
             buffer: 16
-            file: sql/landuse.sql.jinja2
+            file: spirit/landuse.sql.jinja2
     landuse-names:
         description: Various types of landuse
         fields:
@@ -176,12 +176,12 @@ vector_layers:
             maxzoom: 14
             extent: 256
             buffer: 0
-            file: sql/landuse-names.sql.jinja2
+            file: spirit/landuse-names.sql.jinja2
           - minzoom: 15
             maxzoom: 15
             extent: 1024
             buffer: 0
-            file: sql/landuse-names.sql.jinja2
+            file: spirit/landuse-names.sql.jinja2
     education:
         description: Various types of educational areas
         fields:
@@ -191,12 +191,12 @@ vector_layers:
             maxzoom: 14
             extent: 1024
             buffer: 4
-            file: sql/education.sql.jinja2
+            file: spirit/education.sql.jinja2
           - minzoom: 15
             maxzoom: 15
             extent: 4096
             buffer: 16
-            file: sql/education.sql.jinja2
+            file: spirit/education.sql.jinja2
     education-names:
         description: Names of educational facilities
         fields:
@@ -207,12 +207,12 @@ vector_layers:
             maxzoom: 14
             extent: 256
             buffer: 0
-            file: sql/education-names.sql.jinja2
+            file: spirit/education-names.sql.jinja2
           - minzoom: 15
             maxzoom: 15
             extent: 1024
             buffer: 0
-            file: sql/education-names.sql.jinja2
+            file: spirit/education-names.sql.jinja2
     leisure:
         description: Parks and other leisure areas
         sql:
@@ -220,12 +220,12 @@ vector_layers:
             maxzoom: 14
             extent: 1024
             buffer: 4
-            file: sql/leisure.sql.jinja2
+            file: spirit/leisure.sql.jinja2
           - minzoom: 15
             maxzoom: 15
             extent: 4096
             buffer: 16
-            file: sql/leisure.sql.jinja2
+            file: spirit/leisure.sql.jinja2
     leisure-names:
         description: Parks and other leisure area names
         fields:
@@ -235,12 +235,12 @@ vector_layers:
             maxzoom: 14
             extent: 256
             buffer: 0
-            file: sql/leisure-names.sql.jinja2
+            file: spirit/leisure-names.sql.jinja2
           - minzoom: 15
             maxzoom: 15
             extent: 1024
             buffer: 0
-            file: sql/leisure-names.sql.jinja2
+            file: spirit/leisure-names.sql.jinja2
     settlements:
         description: Populated places
         fields: {}
@@ -250,12 +250,12 @@ vector_layers:
             maxzoom: 14
             extent: 1024
             buffer: 4
-            file: sql/settlements.sql.jinja2
+            file: spirit/settlements.sql.jinja2
           - minzoom: 15
             maxzoom: 15
             extent: 4096
             buffer: 16
-            file: sql/settlements.sql.jinja2
+            file: spirit/settlements.sql.jinja2
     vegetation:
         description: vegetation areas
         fields:
@@ -266,12 +266,12 @@ vector_layers:
             maxzoom: 14
             extent: 1024
             buffer: 4
-            file: sql/vegetation.sql.jinja2
+            file: spirit/vegetation.sql.jinja2
           - minzoom: 15
             maxzoom: 15
             extent: 4096
             buffer: 16
-            file: sql/vegetation.sql.jinja2
+            file: spirit/vegetation.sql.jinja2
     vegetation-names:
         description: vegetation names
         fields:
@@ -282,12 +282,12 @@ vector_layers:
             maxzoom: 14
             extent: 256
             buffer: 4
-            file: sql/vegetation-names.sql.jinja2
+            file: spirit/vegetation-names.sql.jinja2
           - minzoom: 15
             maxzoom: 15
             extent: 1024
             buffer: 16
-            file: sql/vegetation-names.sql.jinja2
+            file: spirit/vegetation-names.sql.jinja2
     food:
         description: Food-related POIs
         fields:
@@ -297,4 +297,4 @@ vector_layers:
             maxzoom: 15
             extent: 1024
             buffer: 16
-            file: sql/food.sql.jinja2
+            file: spirit/food.sql.jinja2
