adapt new fonts setting in style.yaml

--- a/style.yaml
+++ b/style.yaml
@@ -5,7 +5,7 @@ sources:
     type: vector
     url: http://127.0.0.1:8000/tilejson.json
 sprite: http://127.0.0.1:8081/sprites
-glyphs: https://pnorman.dev.openstreetmap.org/spirit/fonts/{fontstack}/{range}.pbf
+glyphs: http://127.0.0.1:8081/fonts/{fontstack}/{range}.pbf
 layers:
   - !!inc/file style/background.yaml
   - !!inc/file style/landuse.yaml
